Current Release
- Added date range listing to ListRows in db_access
- Added ListAuditLog function to core
- Fixed roster_database_bootstrap password prompt
- Changed audit logging to include replayable arg and function information
- made AuditLog return audit log id for reference later

2010-03-03 release-0.12
- Fixed view handling of ListRecordsByCidrBlock
- Fixed RemoveRecord in core
- Added new acl_ranges table in db.
- Removed UpdateACL and added RemoveCIDRBlock
- Made new RemovePTRRecord function
- Fixed @ for other record functions

2010-01-27 release-0.11
- Fixed SOA incrementing problem.
- Reduced amount of SOA increments in core and core_helpers
- Fixed default missing_ok in core

2009-12-18 release-0.10
- Fixed some typos in roster_database_bootsrap.

2009-12-09 release-0.9
- Updated MANIFEST
- Removed data/database_schema.sql

2009-12-07 release-0.8
- Embeded database schema and init script and changed roster_database_bootstrap
  to write them out.
- Add extra checking to make sure that if a delete happens in batch processing
  that it actually happened.
- Create new function to list tables in a database in db_access module.
- Removed SQL code from database_bootstrap and instead use the db_access module.
- Added chkconfig runlevels to init script.
- Made adding a cert for TLS an option in roster_database_bootstrap

2009-11-16 release-0.7
- Added MANIFEST to fix install problems.

2009-11-16 release-0.6
- Fixed ipv6 tests in core helpers regtest.
- Made specific errors if functions in RemoveRecord fail.
- Made UnReverseIP more robust.
- Made ReverseIP more robust.
- Made DbAccess thread safe.
- Fixed deadlock condition with all table lock.
- Fixed key error if no reverse range zone assignments were found.
- Made ExpandIPV6 funciton in core_helpers.
- Fixed error when sending a record_args_dict of None to ListRecords.

2009-09-23 release-0.5
- Made trunk install as version 0.1
- Fixed current_version variable in setups